# oddslib

./: .gitignore  LICENSE  Makefile  README.md  index.html  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: conf.py
docs/_templates/sidebar/: brand.html
docs/examples/: basics.ipynb
latest/: .buildinfo  changelog.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
latest/.doctrees/: changelog.doctree  index.doctree
latest/.doctrees/autoapi/: index.doctree
latest/.doctrees/examples/: basics.doctree
latest/.doctrees/getting-started/: quickstart.doctree
latest/.doctrees/user-guide/: overview.doctree
latest/_modules/: index.html
latest/_modules/oddslib/: formats.html
latest/autoapi/oddslib/: index.html
latest/examples/: basics.html
latest/getting-started/: quickstart.html
latest/user-guide/: overview.html
main/: changelog.html  genindex.html  py-modindex.html  search.html
main/.doctrees/: changelog.doctree  environment.pickle
main/.doctrees/autoapi/: index.doctree
main/.doctrees/examples/: basics.doctree
main/.doctrees/getting-started/: installation.doctree  quickstart.doctree
main/_modules/: index.html
main/_sources/: changelog.md.txt
main/autoapi/: index.html
main/getting-started/: installation.html
main/user-guide/: overview.html
src/oddslib/: __init__.py  formats.py
stable/: .buildinfo  genindex.html  index.html  py-modindex.html  search.html
stable/.doctrees/: changelog.doctree  environment.pickle  index.doctree
stable/_static/: custom.css  documentation_options.js
stable/examples/: basics.html
stable/getting-started/: installation.html
stable/user-guide/: overview.html
tests/: test_formats.py
v0.0.1/: changelog.html  search.html  searchindex.js
v0.0.1/.doctrees/: changelog.doctree  environment.pickle  index.doctree
v0.0.1/_modules/: index.html
v0.0.1/_sources/: index.md.txt
v0.0.1/_static/: documentation_options.js
v0.0.1/autoapi/: index.html
v0.0.1/examples/: basics.html
v0.0.1/getting-started/: installation.html  quickstart.html
v0.0.1/user-guide/: overview.html
(+29 files in other folders)
