[project]
name = "oddslib"
version = "0.1.0"
description = "Lightweight odds and probability utilities for Python"
readme = "README.md"
authors = [
    { name = "Reece Colclough", email = "reece.tec@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.26.4,<3",
]

[build-system]
requires = ["uv_build>=0.8.8,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "python-dotenv>=1.1.1",
]
