[project]
name = "oddslib"
dynamic = ["version"]
description = "Lightweight odds and probability utilities for Python"
readme = "README.md"
authors = [
    { name = "Reece Colclough", email = "reece.tec@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.26.4,<3",
]

[build-system]
requires = ["setuptools>=75.6.0", "setuptools-scm>=8.1.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"


[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "python-dotenv>=1.1.1",
]
docs = [
    "packaging>=24.0",
    "furo>=2025.9.25",
    "ipykernel>=6.30.1",
    "myst-parser>=3.0.1",
    "nbsphinx>=0.9.7",
    "pypandoc-binary>=1.15",
    "sphinx>=7.4.7",
    "sphinx-autoapi>=3.6.0",
    "sphinx-autobuild>=2024.10.3",
    "sphinx-multiversion>=0.2.4",
]
